# lunar-engine

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.MD  README.MD  build.sh  codecov.yml  genindex.html  index.html  objects.inv  pmm.cmake  requirements.txt  search.html  searchindex.js  travis.yml
.github/workflows/: codeql.yml  docs.yaml  test.yaml
_sources/api/: class_view_hierarchy.rst.txt  classlunar_1_1core_1_1_application_base.rst.txt  classlunar_1_1core_1_1_event_bus.rst.txt  classlunar_1_1core_1_1_state_machine.rst.txt  define_state__machine_8hpp_1ab4da5405f8525f1c7a491492b04bd512.rst.txt  dir__home_runner_work_lunar-engine_lunar-engine_src.rst.txt  dir__home_runner_work_lunar-engine_lunar-engine_src_core.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.cpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.hpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.cpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.hpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.cpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.hpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_state_base.hpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_state_machine.cpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_state_machine.hpp.rst.txt  file__home_runner_work_lunar-engine_lunar-engine_src_core_static_errors.hpp.rst.txt  file_view_hierarchy.rst.txt  library_root.rst.txt  namespace_lunar.rst.txt  namespace_lunar__core.rst.txt  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.cpp.rst.txt  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.hpp.rst.txt  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.cpp.rst.txt  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.hpp.rst.txt  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.cpp.rst.txt  structlunar_1_1core_1_1_screen.rst.txt  structlunar_1_1core_1_1state__base.rst.txt  (+7 more)
_static/: documentation_options.js
api/: class_view_hierarchy.html  classlunar_1_1core_1_1_application_base.html  classlunar_1_1core_1_1_event_bus.html  classlunar_1_1core_1_1_state_machine.html  define_state__machine_8hpp_1ab4da5405f8525f1c7a491492b04bd512.html  dir__home_runner_work_lunar-engine_lunar-engine_src.html  dir__home_runner_work_lunar-engine_lunar-engine_src_core.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.cpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.hpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.cpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.hpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.cpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.hpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_state_base.hpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_state_machine.cpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_state_machine.hpp.html  file__home_runner_work_lunar-engine_lunar-engine_src_core_static_errors.hpp.html  file_view_hierarchy.html  library_root.html  namespace_lunar.html  namespace_lunar__core.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.cpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_application_base.hpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.cpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_eventbus.hpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.cpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_screen.hpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_state_base.hpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_state_machine.cpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_state_machine.hpp.html  program_listing_file__home_runner_work_lunar-engine_lunar-engine_src_core_static_errors.hpp.html  structlunar_1_1core_1_1_screen.html  structlunar_1_1core_1_1state__base.html  unabridged_api.html  unabridged_orphan.html
docs/: Doxyfile  requirements.txt
tests/: application_framework.test.cpp  csharp_cpp_interop.test.cpp  dylib.test.cpp  invoke_external.hpp  main.cpp  offscreen_render.test.cpp  state_machine.test.cpp  toolkit.cpp  toolkit.hpp
tools/: img_compare.py  img_crop.py  img_diff.py  pyproject.toml  test_tools.py
tools/testlib/testlib-ffi/: Cargo.toml
tools/testlib/testlib-ffi/src/: lib.rs
(+44 files in other folders)
