[tool.poetry]
name = "lunarengine-tools"
version = "0.1.0"
description = ""
authors = ["Algo-ryth-mix <mail.baier.raphael@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
opencv-python = "^4.5.1"
numpy = "^1.20.1"
nose2 = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
